--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,12 +1,13 @@
 body {
     
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-image: url('https://alee182.github.io/itis3135/images/img_188.jpg');
+    background-image: url('images/img_188.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
   height: 100vh;
   margin: 0;
+  
 }
 
 h1 {
@@ -15,4 +16,38 @@ h1 {
 
 footer {
     text-align: center;
+    color: white;  /* Adjust text color */
+  text-align: center;  /* Center align the footer text */
+  padding: 10px 0;
 }
+
+nav a {
+
+  padding: 10px 20px; 
+  margin-right: 20px; 
+  color: #228B22;
+ 
+}
+
+nav a:hover {
+    color: black; 
+  }
+nav {
+    background-color: rgba(211, 211, 211, 0.7);
+    color: #000000;
+    
+}
+nav a:last-child {
+    margin-right: 0;
+  }
+  
+ 
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+
+  #head {
+    text-align: center;
+  }
+
