added components to all itsc3135 + fixed some errors

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,19 +1,13 @@
 <footer>
-    <nav>
-    <a href="https://webpages.charlotte.edu/alee171">charlotte.edu</a> ||
-    <a href="https://github.com/alee182">Github</a> ||
-    <a href="https://alee182.github.io/">Github.io</a> ||
-    <a href="https://alee182.github.io/itis3135/">itis3135.io</a> ||
-    <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
-    <a href="https://www.codecademy.com/profiles/alee171">CodeAcademy</a> ||
-    <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
-    <p>Page Built By: Austin Lee Designs.co</p>
-    </nav>
-    
-       
-       <script>
-          document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-               document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-       </script>
-       
+   <nav>
+   <a href="https://webpages.charlotte.edu/alee171">charlotte.edu</a> ||
+   <a href="https://github.com/alee182">Github</a> ||
+   <a href="https://alee182.github.io/">Github.io</a> ||
+   <a href="https://alee182.github.io/itis3135/">itis3135.io</a> ||
+   <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
+   <a href="https://www.codecademy.com/profiles/alee171">CodeAcademy</a> ||
+   <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
+   <div class="design">
+   <p>Page Built By: <a href="leedesignsunlimited.com/index.html">LeeDesignsUnlimited</a> © 2025 Certified in <a href="https://www.freecodecamp.org/certification/alee171/responsive-web-design" target="_blank">Responsive Web Design</a></p>
+   </nav>
 </footer>
