--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -5,6 +5,9 @@
             <a href="./">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
+            <a href="amicablellama/">Whimsical Company</a>
+            <a href="website_evaluations.html">Website Evaluations</a>
+            <a href="leedesignsunlimited/">Design Firm</a>
         
 
     </nav>
