--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -56,3 +56,8 @@ nav a:last-child {
     text-align: center;
   }
 
+  main {
+    background-color: rgba(211, 211, 211, 0.5);
+    padding: 10px;
+  }
+
