edited header component with crap website

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,8 +6,11 @@
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="amicablellama/">Whimsical Company</a>
+            <a href="leedesignsunlimited.com/">Design Firm</a>
             <a href="website_evaluations.html">Website Evaluations</a>
-            <a href="leedesignsunlimited/">Design Firm</a>
+            <a href="itis3135\stuff\cR@pp13 w3bSItl.htm">Crap Website</a>
+
+            
         
 
     </nav>
