--- a/itis3135/hobby/hobby.css
+++ b/itis3135/hobby/hobby.css
@@ -1,12 +1,20 @@
+body {
+    margin: 0 auto;
+    width: 95%;
+    font-family: Calibri;
+}
+section {
+    display: none;
+}
 
-section.active {
+.active {
     display: block;
   }
   
 
   nav {
-    background-color: #333;
-    padding: 5px;
+    background-color: #8B7355;
+    padding: 10px;
   }
   
   nav ul {
@@ -18,15 +26,56 @@ section.active {
   }
   
   nav ul li {
-    margin: 0 5px;
+    margin: 0 10px;
   }
   
   nav ul li a {
     color: white;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 17px;
   }
   
   nav ul li a:hover {
     text-decoration: underline;
   }
+
+#home-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+
+#who-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+
+#why-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+#seasons-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+
+#how-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+
+#where-pic {
+    max-height: 40%;
+    max-width: 30%;
+}
+
+footer {
+    background-color: #8B7355;
+    color: white;
+    padding: 5px;
+    text-align: center;
+}
+
+footer a {
+    color: #FFA07A;
+}
+
