--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,6 +9,7 @@
             <a href="leedesignsunlimited.com/">Design Firm</a>
             <a href="website_evaluations.html">Website Evaluations</a>
             <a href="itis3135\stuff\cR@pp13 w3bSItl.htm">Crap Website</a>
+            <a href="hobby/">Hobby Site</a>
 
             
         
