Second to last update for website hopefully

--- a/itis3135/hobby/hobby.css
+++ b/itis3135/hobby/hobby.css
@@ -3,7 +3,7 @@ body {
     width: 95%;
     font-family: Calibri;
     color: #FFA07A;
-    background-color: FFFDD0;
+    background-color: #FFFEE8;
 }
 section {
     display: none;
