--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -10,6 +10,8 @@
             <a href="website_evaluations.html">Website Evaluations</a>
             <a href="itis3135\stuff\cR@pp13 w3bSItl.htm">Crap Website</a>
             <a href="hobby/">Hobby Site</a>
+            <a href="byo_intro.html">Build Your Own Intro</a>
+            
 
             
         
