--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -5,7 +5,7 @@
    <a href="https://alee182.github.io/">Github.io</a> ||
    <a href="https://alee182.github.io/itis3135/">itis3135.io</a> ||
    <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
-   <a href="https://www.codecademy.com/profiles/alee171">CodeAcademy</a> ||
+   <a href="https://www.codecademy.com/profiles/alee171">Codecademy</a> ||
    <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
    <p>Page Built By: <a href="leedesignsunlimited.com/">LeeDesignsUnlimited</a> © 2025 Certified in <a href="https://www.freecodecamp.org/certification/alee171/responsive-web-design" target="_blank">Responsive Web Design</a></p>
    </nav>
