--- a/itis3135/backpackingbuddiescharlotte/backpackstyles.css
+++ b/itis3135/backpackingbuddiescharlotte/backpackstyles.css
@@ -2,7 +2,7 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-image: url(); 
+      background-image: url('https://alee182.github.io/itis3135/backpackingbuddiescharlotte/images/background.JPG'); 
     }
     nav {
       background-color: #2e7d32; 
