--- a/itis3135/styles/slideshow.css
+++ b/itis3135/styles/slideshow.css
@@ -62,7 +62,7 @@ nav a:last-child {
   }
 
 
-  * {
+  body {
     box-sizing: border-box;
   }
   
@@ -95,7 +95,7 @@ nav a:last-child {
     font-size: 20px;
     border-radius: 0 3px 3px 0;
     user-select: none;
-    -webkit-user-select: none;
+    
   }
   
   /* Position the "next button" to the right */
