--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -7,6 +7,6 @@
    <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
    <a href="https://www.codecademy.com/profiles/alee171">Codecademy</a> ||
    <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
-   <p>Page Built By: <a href="leedesignsunlimited.com/">LeeDesignsUnlimited</a> © 2025 Certified in <a href="https://www.freecodecamp.org/certification/alee171/responsive-web-design" target="_blank">Responsive Web Design</a></p>
+   <p>Page Built By: <a href="leedesignsunlimited.com/">LeeDesignsUnlimited</a> © 2025 Certified in <a href="https://www.freecodecamp.org/certification/alee171/responsive-web-design" target="_blank">Responsive Web Design</a>, <a target="_blank" href="https://www.freecodecamp.org/certification/alee171/javascript-algorithms-and-data-structures-v8">JS</a></p>
    </nav>
 </footer>
