completed drawing assignment

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,6 +11,8 @@
             <a href="itis3135\stuff\cR@pp13 w3bSItl.htm">Crap Website</a>
             <a href="hobby/">Hobby Site</a>
             <a href="byo_intro.html">Build Your Own Intro</a>
+            <a href="backpackingbuddiescharlotte/">Client Project</a>
+            <a href="drawing.html">p5 Drawing</a>
             
 
             
