--- a/itis3135/backpackingbuddiescharlotte/backpackstyles.css
+++ b/itis3135/backpackingbuddiescharlotte/backpackstyles.css
@@ -78,7 +78,7 @@ html, body {
     background-color: #f9f9f9;
 }
 h1 {
-  text-align: center;
+  text-align: left;
   color: #1b5e20;
 }
 
@@ -151,5 +151,16 @@ tr:hover {
 .footer-copy {
   font-size: 0.8rem;
   color: #c8e6c9;
+}
+
+.gearForm form  {
+  background-color: #c8e6c9;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 6px; 
+  color: #2e4d3f; 
+  margin-top: 10px;
 }
 
