--- a/itis3135/backpackingbuddiescharlotte/components/header.html
+++ b/itis3135/backpackingbuddiescharlotte/components/header.html
@@ -2,7 +2,7 @@
     <nav>
       <a href="./">Home</a>
       <a href="about.html">About Us</a>
-      <a href="upcoming-events.html">Upcoming Events</a>
+      <a href="upcoming.html">Upcoming Events</a>
       <a href="photo-gallery.html">Photo Gallery</a>
       <a href="gearspreadsheet.html">Gear Spreadsheet</a>
     </nav>
