--- a/itis3135/backpackingbuddiescharlotte/backpackstyles.css
+++ b/itis3135/backpackingbuddiescharlotte/backpackstyles.css
@@ -1,3 +1,6 @@
+* {
+  outline: 1px solid red;
+}
 
 html, body {
    margin: 0; padding: 0; width: 100%; 
@@ -107,12 +110,12 @@ tr:hover {
 
 .container2 {
   max-width: 900px;
-  margin: 40px auto 0 auto; /* 40px top, auto sides to center it, 0 bottom */
+  margin: 40px auto auto auto; /* 40px top, auto sides to center it, 0 bottom */
   background-color: #ffffff;
   padding: 40px;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  width: calc(100% - 80px); /* 40px padding left + 40px padding right */
+  width: calc(100% - 80px);
 }
 
 .site-footer {
@@ -121,9 +124,9 @@ tr:hover {
   text-align: center;
   padding: 0.5rem 0.5rem;
   width: 100%;
-  font-family: 'Montserrat', sans-serif; /* matches site */
+  font-family: 'Montserrat', sans-serif; 
   font-size: 0.9rem; /* slightly smaller than nav */
-  border-top: 2px solid #4caf50; /* a soft light green separator */
+  border-top: 2px solid #4caf50; 
 }
 
 .site-footer a {
@@ -162,5 +165,17 @@ tr:hover {
   border-radius: 6px; 
   color: #2e4d3f; 
   margin-top: 10px;
+}
+
+#gearTable {
+  margin-top: 20px;
+  width: 100%;
+}
+input[type="number"] {
+  width: 80px;
+}
+
+#countdown {
+  color: #2e4d3f; 
 }
 
