--- a/itis3135/backpackingbuddiescharlotte/slides.css
+++ b/itis3135/backpackingbuddiescharlotte/slides.css
@@ -13,6 +13,8 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
+    
+  overflow-x: hidden;
   }
   nav a {
     color: #ffffff;
@@ -141,6 +143,9 @@ body {
     font-family: 'Montserrat', sans-serif; /* matches site */
     font-size: 0.9rem; /* slightly smaller than nav */
     border-top: 2px solid #4caf50; /* a soft light green separator */
+    margin: 0;
+  
+  overflow-x: hidden;
   }
   
   .site-footer a {
